deploy: 201dbc804987fdea7a2d5378149b8c416ac3be20

--- a/client_src_components_content_ModelerSidebar_PropertiesPanel_PropertiesPanelComponents_PPParameterInput.jsx.html
+++ b/client_src_components_content_ModelerSidebar_PropertiesPanel_PropertiesPanelComponents_PPParameterInput.jsx.html
@@ -85,11 +85,16 @@
     
     <section>
         <article>
-            <pre class="prettyprint source linenums"><code>import React from 'react';
-import { Input, Tooltip } from 'antd';
+            <pre class="prettyprint source linenums"><code>import React, { useState } from 'react';
+import { Input, Tooltip, Checkbox } from 'antd';
 import { InfoCircleOutlined } from '@ant-design/icons';
-import PropTypes from 'prop-types'
+import PropTypes from 'prop-types';
 import corporateDesign from '../../../../../layout/corporateDesign';
+import styles from '../../ModelerSidebar.module.css';
+import {
+  parameterPropertyStatus,
+  setPropertyForParameter,
+} from '../../../../../utils/attributeAndParamUtils';
 
 /**
  * @description Renders a parameter input field for a given variable
@@ -97,34 +102,84 @@ import corporateDesign from '../../../../../layout/corporateDesign';
  * @component
  */
 const PPParameterInput = ({
-    onValueChange,
-    variableName,
-    isRequired,
-    // eslint-disable-next-line no-unused-vars
-    dataType,
-    value
-}) => (
+  onValueChange,
+  variableName,
+  isRequired,
+  // eslint-disable-next-line no-unused-vars
+  dataType,
+  value,
+  robotId,
+  selectedActivity,
+}) => {
+  const [userInputRequired, setUserInputRequired] = useState(
+    parameterPropertyStatus(
+      robotId,
+      selectedActivity,
+      variableName,
+      'requireUserInput'
+    )
+  );
+  const [parameterValue, setParameterValue] = useState(
+    parameterPropertyStatus(robotId, selectedActivity, variableName, 'value')
+  );
+
+  const changeUserInputRequirement = (event, parameterName) => {
+    setPropertyForParameter(
+      selectedActivity,
+      parameterName,
+      'requireUserInput',
+      event.target.checked
+    );
+    setUserInputRequired(event.target.checked);
+  };
+
+  const changeParamterValue = (event, parameterName) => {
+    setPropertyForParameter(
+      selectedActivity,
+      parameterName,
+      'value',
+      event.target.value
+    );
+    setParameterValue(event.target.value);
+  };
+  return (
     &lt;>
-        &lt;Input
-            placeholder={variableName}
-            defaultValue={value}
-            onPressEnter={onValueChange}
-            suffix={
-                isRequired &amp;&amp;
-                &lt;Tooltip title='This field is required for the task to work'>
-                    &lt;InfoCircleOutlined style={{ color: corporateDesign.colorBackgroundCta }} />
-                &lt;/Tooltip>
-            }
-        />
+      &lt;Input
+        placeholder={variableName}
+        defaultValue={value}
+        value={userInputRequired ? '' : parameterValue}
+        onChange={(event) => changeParamterValue(event, variableName)}
+        onPressEnter={onValueChange}
+        suffix={
+          isRequired &amp;&amp; (
+            &lt;Tooltip title='This field is required for the task to work'>
+              &lt;InfoCircleOutlined
+                style={{ color: corporateDesign.colorBackgroundCta }}
+              />
+            &lt;/Tooltip>
+          )
+        }
+        disabled={userInputRequired}
+      />
+      &lt;Checkbox
+        onChange={(event) => changeUserInputRequirement(event, variableName)}
+        checked={userInputRequired}
+        className={styles[`label-on-dark-background`]}
+      >
+        User Input required
+      &lt;/Checkbox>
     &lt;/>
-);
+  );
+};
 
 PPParameterInput.propTypes = {
-    onValueChange: PropTypes.func.isRequired,
-    variableName: PropTypes.string.isRequired,
-    isRequired: PropTypes.bool.isRequired,
-    dataType: PropTypes.string.isRequired,
-    value: PropTypes.string.isRequired,
+  onValueChange: PropTypes.func.isRequired,
+  variableName: PropTypes.string.isRequired,
+  isRequired: PropTypes.bool.isRequired,
+  dataType: PropTypes.string.isRequired,
+  value: PropTypes.string.isRequired,
+  robotId: PropTypes.string.isRequired,
+  selectedActivity: PropTypes.string.isRequired,
 };
 
 export default PPParameterInput;
