--- a/client_src_utils_BpmnToSsotParsing_BpmnToSsotParsing.js.html
+++ b/client_src_utils_BpmnToSsotParsing_BpmnToSsotParsing.js.html
@@ -287,7 +287,8 @@ const parseBpmnToSsot = async (bpmnXml, robotId) => {
   return ssot;
 }
 
-export default parseBpmnToSsot;
+// eslint-disable-next-line import/prefer-default-export
+export {parseBpmnToSsot};
 </code></pre>
         </article>
     </section>
