--- a/server_utils_TestingUtils_TestDatabaseHandler.js.html
+++ b/server_utils_TestingUtils_TestDatabaseHandler.js.html
@@ -103,7 +103,7 @@ const mongod = new MongoMemoryServer({
 /**
  * Connect to the in-memory database.
  */
-module.exports.connect = async () => {
+exports.connect = async () => {
   const uri = await mongod.getUri();
   await mongoose.createConnection(uri, mongooseOpts);
   await mongoose.connect(uri, mongooseOpts);
@@ -112,7 +112,7 @@ module.exports.connect = async () => {
 /**
  * Drop database, close the connection and stop mongod.
  */
-module.exports.closeDatabase = async () => {
+exports.closeDatabase = async () => {
   await mongoose.connection.dropDatabase();
   await mongoose.connection.close();
   await mongoose.disconnect();
@@ -122,7 +122,7 @@ module.exports.closeDatabase = async () => {
 /**
  * Remove all the data for all db collections.
  */
-module.exports.clearDatabase = async () => {
+exports.clearDatabase = async () => {
   const { collections } = mongoose.connection;
 
   // fix according to https://docs.w3cub.com/eslint/rules/no-await-in-loop.html
