--- a/client_src_components_content_ModelerSidebar_PropertiesPanel_PropertiesPanel.jsx.html
+++ b/client_src_components_content_ModelerSidebar_PropertiesPanel_PropertiesPanel.jsx.html
@@ -88,14 +88,14 @@
             <pre class="prettyprint source linenums"><code>import React from 'react';
 import { is } from 'bpmn-js/lib/util/ModelUtil';
 import { Space } from 'antd';
-import PropTypes from 'prop-types'
+import PropTypes from 'prop-types';
 
 import PPIdSection from './PropertiesPanelSections/PPIdSection';
-import PPTitle from './PropertiesPanelSections/PPTitleSection'
+import PPTitle from './PropertiesPanelSections/PPTitleSection';
 import PPNameSection from './PropertiesPanelSections/PPNameSection';
 import PPParameterSection from './PropertiesPanelSections/PPParameterSection';
 import PPRpaSection from './PropertiesPanelSections/PPRpaSection';
-import PPOutputValueSection from './PropertiesPanelSections/PPOutputValueSection'
+import PPOutputValueSection from './PropertiesPanelSections/PPOutputValueSection';
 
 /**
  * @description Shows PropertiesPanel for one selected BPMN-Element.
@@ -110,12 +110,13 @@ const PropertiesPanel = ({
   selectedActivity,
   taskSelectionUpdated,
   disableTaskSelection,
+  robotId,
   variableList,
   parameterSelectionUpdated,
   outputVariableName,
-  outputNameUpdated
+  outputNameUpdated,
 }) => (
-  &lt; div className='element-properties' key={element.id} >
+  &lt;div className='element-properties' key={element.id}>
     &lt;Space direction='vertical' style={{ width: '100%' }}>
       &lt;PPTitle element={element} />
       &lt;PPIdSection element={element} />
@@ -131,12 +132,24 @@ const PropertiesPanel = ({
             disableTaskSelection={disableTaskSelection}
             selectedActivity={selectedActivity}
           />
-          {((variableList.length > 0) &amp;&amp; &lt;PPParameterSection variableList={variableList} onValueChange={parameterSelectionUpdated} />)}
-          {(outputVariableName &amp;&amp; &lt;PPOutputValueSection outputVariableText={outputVariableName} onNameChange={outputNameUpdated} />)}
+          {variableList.length > 0 &amp;&amp; (
+            &lt;PPParameterSection
+              selectedActivity={selectedActivity}
+              variableList={variableList}
+              onValueChange={parameterSelectionUpdated}
+              robotId={robotId}
+            />
+          )}
+          {outputVariableName &amp;&amp; (
+            &lt;PPOutputValueSection
+              outputVariableText={outputVariableName}
+              onNameChange={outputNameUpdated}
+            />
+          )}
         &lt;/>
       )}
     &lt;/Space>
-  &lt;/div >
+  &lt;/div>
 );
 
 PropertiesPanel.propTypes = {
@@ -151,6 +164,7 @@ PropertiesPanel.propTypes = {
   parameterSelectionUpdated: PropTypes.func.isRequired,
   outputVariableName: PropTypes.string.isRequired,
   outputNameUpdated: PropTypes.func.isRequired,
+  robotId: PropTypes.string.isRequired,
 };
 
 export default PropertiesPanel;
