--- a/client_src_components_content_ModelerSidebar_PropertiesPanel_PropertiesPanelSections_PPParameterSection.jsx.html
+++ b/client_src_components_content_ModelerSidebar_PropertiesPanel_PropertiesPanelSections_PPParameterSection.jsx.html
@@ -86,7 +86,7 @@
     <section>
         <article>
             <pre class="prettyprint source linenums"><code>import React from 'react';
-import PropTypes from 'prop-types'
+import PropTypes from 'prop-types';
 import { Typography, Space } from 'antd';
 import styles from '../../ModelerSidebar.module.css';
 import PPParameterInput from '../PropertiesPanelComponents/PPParameterInput';
@@ -98,27 +98,38 @@ const { Text } = Typography;
  * @category Client
  * @component
  */
-const PPParameterSection = ({ onValueChange, variableList }) => (
-    &lt;>
-        &lt;Text className={styles[`label-on-dark-background`]}>Parameter:&lt;/Text>
+const PPParameterSection = ({
+  selectedActivity,
+  variableList,
+  onValueChange,
+  robotId,
+}) => (
+  &lt;>
+    &lt;Text className={styles[`label-on-dark-background`]}>Parameter:&lt;/Text>
 
-        &lt;Space direction='vertical' style={{ width: '100%' }}>
-            {variableList.map((singleInput) => (
-                &lt;PPParameterInput
-                    onValueChange={onValueChange}
-                    variableName={singleInput.name}
-                    isRequired={singleInput.isRequired}
-                    dataType={singleInput.type}
-                    value={singleInput.value}
-                />
-            ))}
-        &lt;/Space>
-    &lt;/>
+    &lt;Space direction='vertical' style={{ width: '100%' }}>
+      {variableList.map((singleInput) => (
+        &lt;>
+          &lt;PPParameterInput
+            onValueChange={onValueChange}
+            variableName={singleInput.name}
+            isRequired={singleInput.isRequired}
+            dataType={singleInput.type}
+            value={singleInput.value}
+            robotId={robotId}
+            selectedActivity={selectedActivity}
+          />
+        &lt;/>
+      ))}
+    &lt;/Space>
+  &lt;/>
 );
 
 PPParameterSection.propTypes = {
-    onValueChange: PropTypes.func.isRequired,
-    variableList: PropTypes.arrayOf(PropTypes.shape).isRequired
+  selectedActivity: PropTypes.string.isRequired,
+  onValueChange: PropTypes.func.isRequired,
+  variableList: PropTypes.arrayOf(PropTypes.shape).isRequired,
+  robotId: PropTypes.string.isRequired,
 };
 
 export default PPParameterSection;
