--- a/client_src_components_content_RobotContainer_RobotContainer.jsx.html
+++ b/client_src_components_content_RobotContainer_RobotContainer.jsx.html
@@ -94,6 +94,7 @@ import { Link } from 'react-router-dom';
 import socket from '../../../utils/socket/socketConnections';
 import styles from './RobotContainer.module.css';
 import { changeSsotName } from '../../../api/ssotRetrieval';
+import { isRobotExecutable } from '../../../utils/robotExecution';
 
 const { Title } = Typography;
 
@@ -109,10 +110,9 @@ const RobotContainer = (props) => {
   /**
    * @description Sends a job to the server to execute a specfic robot for a specific user
    */
-  const startRobot = () => {
-    // isBotExecutable function is to be implemented
-    const isBotExecutable = true;
-    if (isBotExecutable) {
+  const startRobot = async () => {
+    const robotIsExecutable = await isRobotExecutable(robotId);
+    if (robotIsExecutable) {
       socket.emit('robotExecutionJobs', { robotId, userId });
     } else {
       alert('Your Bot is not fully configured and can not be executed!');
