--- a/server_services_SsotToRobotParsing_SsotToRobotParser.js.html
+++ b/server_services_SsotToRobotParsing_SsotToRobotParser.js.html
@@ -95,6 +95,7 @@ const ssotModels = require('../../models/singleSourceOfTruthModel.js');
 
 const ACTIVITY_IDENTIFIER = 'INSTRUCTION';
 const LINEBREAK = '\n';
+const COMMENT = '#';
 // eslint-disable-next-line no-unused-vars
 const DOUBLESPACE = '  ';
 const FOURSPACE = '    ';
@@ -104,19 +105,17 @@ const FOURSPACE = '    ';
  * @param {Object} currentElement Element to check
  * @returns {Boolean} Value specifies if object is of type instruction and contains rpa attributes
  */
-const isAnRpaInstruction = (currentElement) => (
-  currentElement.type === ACTIVITY_IDENTIFIER
-)
+const isAnRpaInstruction = (currentElement) =>
+  currentElement.type === ACTIVITY_IDENTIFIER;
 
 /**
  * @description Checks whether the given element has a successor element
  * @param {Object} currentElement Element to check
  * @returns {Boolean} Value specifies if element has a successor element
  */
-const successorTasksExist = (currentElement) => (
+const successorTasksExist = (currentElement) =>
   currentElement.successorIds !== undefined &amp;&amp;
-  currentElement.successorIds[0] !== ''
-)
+  currentElement.successorIds[0] !== '';
 
 /**
  * @description Will append all provided parameters to a string which can be used to generate the RPAf file
@@ -126,10 +125,15 @@ const successorTasksExist = (currentElement) => (
 const appendRpaInputParameter = (parameterObject) => {
   let newCodeLine = '';
 
-  const sortedInputs = parameterObject.rpaParameters.sort((a, b) => (a.index - b.index));
+  const sortedInputs = parameterObject.rpaParameters.sort(
+    (a, b) => a.index - b.index
+  );
   sortedInputs.forEach((parameter) => {
     // regex will return -1 if no $$text$$ was found
-    newCodeLine += (parameter.value.search(/\$\$(.*?)\$\$/) &lt; 0) ? `${FOURSPACE}${parameter.value}` : `${FOURSPACE}$\{${parameter.value.split('$$')[1]}\}`;
+    newCodeLine +=
+      parameter.value.search(/\$\$(.*?)\$\$/) &lt; 0
+        ? `${FOURSPACE}${parameter.value}`
+        : `${FOURSPACE}$\{${parameter.value.split('$$')[1]}\}`;
   });
 
   return newCodeLine;
@@ -171,19 +175,31 @@ const writeCodeForElement = (
   let newCodeLine = '';
   let newPreviousApplication = previousApplication;
   if (isAnRpaInstruction(currentElement)) {
-    const currentAttributeObject = attributes.find((attribute) => attribute.activityId === id);
-    if (currentAttributeObject.rpaApplication !== previousApplication) {
-      newPreviousApplication = currentElement.rpaApplication;
+    const currentAttributeObject = attributes.find(
+      (attribute) => attribute.activityId === id
+    );
+    if (currentAttributeObject) {
+      if (currentAttributeObject.rpaApplication !== previousApplication) {
+        newPreviousApplication = currentAttributeObject.rpaApplication;
+        newCodeLine += currentAttributeObject.rpaApplication + LINEBREAK;
+      } else {
+        newPreviousApplication = previousApplication;
+      }
+      newCodeLine += COMMENT + currentElement.name + LINEBREAK;
+      const currentParameterObject = parameters.find(
+        (parameter) => parameter.activityId === id
+      );
+      if (currentParameterObject) {
+        newCodeLine += setOutputVar(currentParameterObject);
+      }
+      newCodeLine += currentAttributeObject.rpaTask;
+      if (currentParameterObject) {
+        newCodeLine += appendRpaInputParameter(currentParameterObject);
+      }
+
+      newCodeLine += LINEBREAK;
+      combinedCode += newCodeLine;
     }
-    const currentParameterObject = parameters.find((parameter) => parameter.activityId === id);
-    newCodeLine += currentElement.name + LINEBREAK;
-    newCodeLine += setOutputVar(currentParameterObject);
-    newCodeLine += currentAttributeObject.rpaTask;
-
-    newCodeLine += appendRpaInputParameter(currentParameterObject);
-
-    newCodeLine += LINEBREAK;
-    combinedCode += newCodeLine;
   }
 
   if (successorTasksExist(currentElement)) {
@@ -234,8 +250,10 @@ const collectApplications = (elements) => {
   const applications = [];
   if (elements !== undefined &amp;&amp; elements.length > 0) {
     elements.forEach((element) => {
-      if (element.rpaApplication !== undefined &amp;&amp;
-        !applications.includes(element.rpaApplication)) {
+      if (
+        element.rpaApplication !== undefined &amp;&amp;
+        !applications.includes(element.rpaApplication)
+      ) {
         applications.push(element.rpaApplication);
       }
     });
@@ -281,12 +299,12 @@ const retrieveParameters = async (ssot) => {
     .find(
       {
         ssotId: id,
-        activityId: { $in: listOfActivityIds }
+        activityId: { $in: listOfActivityIds },
       },
       {
         activityId: 1,
         rpaParameters: 1,
-        outputVariable: 1
+        outputVariable: 1,
       }
     )
     .exec();
@@ -312,12 +330,10 @@ const retrieveAttributes = async (ssot) => {
 
   const attributeObjects = await mongoose
     .model('rpaAttributes')
-    .find(
-      {
-        ssotId: id,
-        activityId: { $in: listOfActivityIds }
-      }
-    )
+    .find({
+      ssotId: id,
+      activityId: { $in: listOfActivityIds },
+    })
     .exec();
 
   return attributeObjects;
@@ -355,7 +371,7 @@ const parseSsotById = async (ssotId) => {
 
 module.exports = {
   parseSsotToRobotCode,
-  parseSsotById
+  parseSsotById,
 };
 </code></pre>
         </article>
