deploy: a4c7da9aac899283c4041234b95999d21225aa1d

--- a/frontend_src_api_routes_robots_robots.js.html
+++ b/frontend_src_api_routes_robots_robots.js.html
@@ -92,7 +92,7 @@
 
 /**
  * @description Triggers parsing of the Ssot to .robot file
- * @returns returns .robot file code
+ * @returns {String} returns .robot file code
  */
 const getParsedRobotFile = async (robotId) =>
   fetch(`/robots/${robotId}/robotCode`);
