--- a/frontend_src_components_pages_RobotModeler_ModelerSidebar_PropertiesPanel_PropertiesPanelSections_PPParameterSection_subComponents_PPParameterInput.jsx.html
+++ b/frontend_src_components_pages_RobotModeler_ModelerSidebar_PropertiesPanel_PropertiesPanelSections_PPParameterSection_subComponents_PPParameterInput.jsx.html
@@ -166,7 +166,7 @@ const PPParameterInput = ({
 
   /**
    * @description returns the Unlock-Icon
-   * @returns the corresponding icon
+   * @returns {React.ReactElement} the corresponding icon
    */
   const returnLockIcon = (inputParameterName) => (
     &lt;UnlockOutlined
