--- a/frontend_src_utils_sessionStorage_localSsotController_attributes.js.html
+++ b/frontend_src_utils_sessionStorage_localSsotController_attributes.js.html
@@ -103,7 +103,7 @@ const getAttributeStorage = () =>
 /**
  * @description Retrieves the attribute object for an activiy from session storage
  * @param {String} activityId Id of the activity for which the attribute object will be retrieved
- * @returns The attribute object for the selected activity or undefined if not available
+ * @returns {Object} The attribute object for the selected activity or undefined if not available
  */
 const getAttributeObjectForActivity = (activityId) => {
   const localAttributeStorage = JSON.parse(
@@ -117,7 +117,7 @@ const getAttributeObjectForActivity = (activityId) => {
 /**
  * @description Retrieves the selected rpa task for the selected activity from session storage
  * @param {String} activityId Id of the currently selected activity
- * @returns The selected rpa task for the selected activity from session storage or undefined if not available
+ * @returns {String} The selected rpa task for the selected activity from session storage or undefined if not available
  */
 const getRpaTask = (activityId) => {
   const matchingEntry = getAttributeObjectForActivity(activityId);
@@ -203,7 +203,7 @@ const setRpaApplication = (robotId, activityId, newApplication) => {
 /**
  * @description Retrieves the rpa application for the selected activity from the session storage
  * @param {String} activityId Id of the currently selected activity
- * @returns The selected rpa application for the selected activity or undefined
+ * @returns {String} The selected rpa application for the selected activity or undefined
  */
 const getRpaApplication = (activityId) => {
   const matchingEntry = getAttributeObjectForActivity(activityId);
