--- a/frontend_src_utils_sessionStorage_localSsotController_ssot.js.html
+++ b/frontend_src_utils_sessionStorage_localSsotController_ssot.js.html
@@ -116,7 +116,7 @@ const PARAMETER_STORAGE_PATH = 'parameterLocalStorage';
 
 /**
  * @description Retrieves the robotId of the currently opened robot from the session storage
- * @returns Currently saved robotId
+ * @returns {String} Currently saved robotId
  */
 const getRobotId = () => JSON.parse(sessionStorage.getItem(ROBOT_ID_PATH));
 
