deploy: 98ea6f49a8cc39c7fd735c201cb043dad977ff13

--- a/frontend_src_components_pages_RobotModeler_BpmnModeler_removeUnsupportedBpmnFunctions.js.html
+++ b/frontend_src_components_pages_RobotModeler_BpmnModeler_removeUnsupportedBpmnFunctions.js.html
@@ -7,7 +7,7 @@
   
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title> frontend/src/components/pages/RobotInteractionCockpit/robotInteractionCockpitFunctionality/robotInteractionCockpitFunctionality.js</title>
+  <title> frontend/src/components/pages/RobotModeler/BpmnModeler/removeUnsupportedBpmnFunctions.js</title>
 
   <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -76,7 +76,7 @@
             <div class="content">
                 <header class="page-title">
                     <p>Source</p>
-                    <h1>frontend/src/components/pages/RobotInteractionCockpit/robotInteractionCockpitFunctionality/robotInteractionCockpitFunctionality.js</h1>
+                    <h1>frontend/src/components/pages/RobotModeler/BpmnModeler/removeUnsupportedBpmnFunctions.js</h1>
                 </header>
                 
 
@@ -85,145 +85,53 @@
     
     <section>
         <article>
-            <pre class="prettyprint source linenums"><code>import { getAllParametersForRobot } from '../../../../api/routes/robots/rpaParameter';
-import { getAllAttributes } from '../../../../api/routes/robots/rpaAttributes';
+            <pre class="prettyprint source linenums"><code>/* eslint-disable func-names */
+import PaletteProvider from 'bpmn-js/lib/features/palette/PaletteProvider';
 
 /**
+ * @description Removes unsopported BPMN artifacts from the modeler
  * @category Frontend
- * @module
  */
-
-/**
- * @description Will return a boolean regarding the correct configuration of the given parameterObejcts belonging to a robot.
- * If a paramter is required and no value is passed and the value will not be specified later by the user, the paramter is not correctly configured.
- * @param {Object[]} parameterObjects Array of parameterObjects that will be checked
- * @returns {boolean} Boolean value regarding the correctness of the parameter configuration
- */
-const configuredRobotParamsCorrectly = (parameterObjects) => {
-  let executability = true;
-  parameterObjects.forEach((parameterObject) => {
-    parameterObject.rpaParameters.forEach((parameter) => {
-      if (
-        parameter.isRequired === true &amp;&amp;
-        (parameter.requireUserInput === false ||
-          parameter.requireUserInput === undefined) &amp;&amp;
-        parameter.value === ''
-      ) {
-        console.error(
-          'Required parameter not specified in parameter',
-          parameter
-        );
-        executability = false;
-      }
-    });
-  });
-  return executability;
-};
-
-/**
- * @description Will return a boolean regarding the correct configuration regarding the given attributeObjects of a robot.
- * If an attribute has no specified application or task, the attribute is not correctly configured.
- * @param {Object[]} attributeObjects Array of attributeObjects that will be checked
- * @returns {boolean} A boolean value regarding the correctness of the attribute configuration
- */
-const configuredRobotActivitesCorrectly = (attributeObjects) => {
-  let executability = true;
-  attributeObjects.forEach((attributeObject) => {
-    if (attributeObject.rpaApplication === '') {
-      console.error(
-        `RPA Application of ${attributeObject.activityId} not specified`,
-        attributeObject
-      );
-      executability = false;
+const removeUnsupportedBpmnFunctions = () => {
+  const { getPaletteEntries } = PaletteProvider.prototype;
+  PaletteProvider.prototype.getPaletteEntries = function () {
+    const entries = getPaletteEntries.apply(this);
+    delete entries['create.intermediate-event'];
+    delete entries['create.subprocess-expanded'];
+    delete entries['create.participant-expanded'];
+    delete entries['create.group'];
+    delete entries['create.exclusive-gateway'];
+    delete entries['create.data-store'];
+    delete entries['create.data-object'];
+    return entries;
+  };
+  class CustomContextPadProvider {
+    constructor(contextPad) {
+      contextPad.registerProvider(this);
     }
-    if (attributeObject.rpaTask === '') {
-      console.error(
-        `RPA Task of ${attributeObject.activityId} not specified`,
-        attributeObject
-      );
-      executability = false;
+
+    // eslint-disable-next-line class-methods-use-this
+    getContextPadEntries() {
+      return function (entries) {
+        const customizesEntries = entries;
+        delete customizesEntries['append.text-annotation'];
+        delete customizesEntries['append.gateway'];
+        delete customizesEntries['append.intermediate-event'];
+        delete customizesEntries['lane-insert-above'];
+        delete customizesEntries['lane-divide-two'];
+        delete customizesEntries['lane-divide-three'];
+        delete customizesEntries['lane-insert-below'];
+        delete customizesEntries.replace;
+        return customizesEntries;
+      };
     }
-  });
-  return executability;
-};
-
-/**
- * @description Will return a boolean regarding the correct configuration of a robot.
- * If a robot has incorrectly configured attributes or parameters, then the robot is not correctly configured.
- * @param {String} robotId RobotId of the robot that will be checked
- * @returns {boolean} Boolean value regarding the executability of the robot
- */
-const isRobotExecutable = async (robotId) => {
-  const attributes = await getAllAttributes(robotId);
-  const activitiesAreCorrect = configuredRobotActivitesCorrectly(
-    await attributes.json()
-  );
-
-  const parameters = await getAllParametersForRobot(robotId);
-  const paramsAreCorrect = configuredRobotParamsCorrectly(
-    await parameters.json()
-  );
-
-  if (activitiesAreCorrect &amp;&amp; paramsAreCorrect) {
-    return true;
   }
-  return false;
+
+  CustomContextPadProvider.$inject = ['contextPad'];
+  return CustomContextPadProvider;
 };
 
-/**
- * @description Get the id, the name and all the parameters for each activity of the current robot that require a user input
- * @param {String} robotId Id of the robot for which all parameters will be retrieved
- * @param {Function} setParameterList Setter function for the component state parameterList
- * @param {Object} isMounted Describes if the component is currently mounted or not
- */
-const getActivityAndParameterInformation = (
-  robotId,
-  setParameterList,
-  isMounted
-) => {
-  getAllParametersForRobot(robotId)
-    .then((response) => response.json())
-    .then((parameterObjects) => {
-      if (parameterObjects.length > 0) {
-        const activityInformationList = [];
-        parameterObjects.forEach((parameterObject) => {
-          const { activityId } = parameterObject;
-          let activityName = '';
-          const ssot = JSON.parse(sessionStorage.getItem('ssotLocal'));
-          ssot.elements.forEach((element) => {
-            if (element.id === activityId) {
-              activityName = element.name;
-            }
-          });
-          const activityParameter = [];
-          parameterObject.rpaParameters.forEach((parameter) => {
-            if (parameter.requireUserInput) {
-              activityParameter.push(parameter);
-            }
-          });
-          if (activityParameter.length > 0) {
-            const activityInformation = {
-              activityId,
-              activityParameter,
-              activityName,
-            };
-            activityInformationList.push(activityInformation);
-          }
-        });
-
-        if (isMounted.current) {
-          setParameterList(activityInformationList);
-        }
-      }
-    });
-};
-
-export {
-  getActivityAndParameterInformation,
-  isRobotExecutable,
-  configuredRobotParamsCorrectly,
-  configuredRobotActivitesCorrectly,
-};
+export default removeUnsupportedBpmnFunctions;
 </code></pre>
         </article>
     </section>
