--- a/server_socket_socketHelperFunctions.js.html
+++ b/server_socket_socketHelperFunctions.js.html
@@ -7,7 +7,7 @@
   
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title> frontend/src/components/pages/RobotInteractionCockpit/RobotInteractionSections/RobotInteractionExecutionSection/subComponents/RobotLogEntryCard.jsx</title>
+  <title> server/socket/socketHelperFunctions.js</title>
 
   <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -76,7 +76,7 @@
             <div class="content">
                 <header class="page-title">
                     <p>Source</p>
-                    <h1>frontend/src/components/pages/RobotInteractionCockpit/RobotInteractionSections/RobotInteractionExecutionSection/subComponents/RobotLogEntryCard.jsx</h1>
+                    <h1>server/socket/socketHelperFunctions.js</h1>
                 </header>
                 
 
@@ -85,59 +85,154 @@
     
     <section>
         <article>
-            <pre class="prettyprint source linenums"><code>import React from 'react';
-import { Card, Row, Col } from 'antd';
-import PropTypes from 'prop-types';
+            <pre class="prettyprint source linenums"><code>/* eslint-disable no-unused-vars */
+require('express');
+const mongoose = require('mongoose');
+const ssotToRobotParser = require('../utils/ssotToRobotParsing/ssotToRobotParser.js');
+const ssotModels = require('../api/models/singleSourceOfTruthModel.js');
+const userAccessObject = require('../api/models/userAccessObjectModel.js');
+const jobsModel = require('../api/models/robotJobModel.js');
 
 /**
- * @description Renders the status of an individual robot log
- * @category Frontend
- * @component
+ * @category Server
+ * @module
  */
-const RobotLogCard = (props) => {
-  const { log } = props;
-  const { displayStatusIcon } = props;
 
-  return (
-    &lt;Card
-      style={{ margin: '10px' }}
-      headStyle={{ fontWeight: 'bold' }}
-      hoverable
-      title={log.activityName}
-      size='small'
-      type='inner'
-    >
-      &lt;Row>
-        &lt;Col xs={24} md={16}>
-          {log.message &amp;&amp; &lt;p>Error Message: {log.message}&lt;/p>}
-          {log.tasks &amp;&amp;
-            log.tasks.map((task, index) => (
-              // eslint-disable-next-line react/no-array-index-key
-              &lt;Card key={index} size='small'>
-                &lt;Row>
-                  &lt;Col xs={24} lg={24} xl={16}>
-                    &lt;p>Task: {task.taskName}&lt;/p>
-                  &lt;/Col>
-                  &lt;Col xs={24} lg={24} xl={8}>
-                    &lt;p>Status: {task.status}&lt;/p>
-                  &lt;/Col>
-                &lt;/Row>
-              &lt;/Card>
-            ))}
-        &lt;/Col>
-        &lt;Col xs={24} md={8}>
-          &lt;>{displayStatusIcon(log.status)}&lt;/>
-        &lt;/Col>
-      &lt;/Row>
-    &lt;/Card>
+mongoose.set('useFindAndModify', false);
+
+/**
+ * @description Fetches the ssot of a given robot from the database and parses the ssot to robot code
+ * @param {String} robotId Id of the robot that the robot code will be fetched for
+ * @param {String} jobId Id of the current job
+ */
+exports.getRobotCodeForJob = async (robotId, jobId) => {
+  try {
+    const robotCode = ssotToRobotParser.parseCodeForJob(robotId, jobId);
+    return robotCode;
+  } catch (err) {
+    return console.error(err);
+  }
+};
+
+/**
+ * @description Fetches the ssot of a given robot from the database and parses the ssot to robot code
+ * @param {String} robotId Id of the robot that the robot code will be fetched for
+ */
+exports.getRobotCode = async (robotId) => {
+  try {
+    const robotCode = ssotToRobotParser.parseSsotById(robotId);
+    return robotCode;
+  } catch (err) {
+    return console.error(err);
+  }
+};
+
+/**
+ * @description Finds a specific robot job and retrieves the parameter array
+ * @param {String} jobId Id of the robot for which all parameters will be retrieved
+ */
+exports.getRobotJobParameters = async (jobId) => {
+  const robotJobParameters = await mongoose
+    .model('job')
+    .findById(jobId, {
+      parameters: 1,
+    })
+    .exec();
+  return robotJobParameters;
+};
+
+/**
+ * @description Fetches the ssot from the database and parses the ssot to robot code
+ * @param {String} robotId Id of the robot which will be parsed to robot code
+ */
+exports.getAllUserIds = async () => {
+  try {
+    const userObjs = await mongoose.model('userAccessObject').find();
+    let userIds = [];
+    if (userObjs.length > 0) {
+      userIds = userObjs.map((obj) => String(obj.userId));
+    }
+    return userIds;
+  } catch (err) {
+    return console.error(err);
+  }
+};
+
+/**
+ * @description Creates a Job in the database for a robot execution of a specific user
+ * @param {String} userId Id of the user that wants to execute a robot
+ * @param {String} robotId Id of the robot tha will be executed
+ * @param {String} status Current status of the job (either waiting, executing, successful or failed)
+ * @param {Array} parameters Different parameters the user defined before executing the robot
+ */
+exports.createJob = async (userId, robotId, status, parameters) => {
+  const job = new jobsModel.Job({
+    userId,
+    robotId,
+    status,
+    parameters,
+  });
+  try {
+    const jobObj = await job.save();
+    const { _id: objId } = jobObj;
+    return objId;
+  } catch (err) {
+    console.error(err);
+    return undefined;
+  }
+};
+
+/**
+ * @description Finds a specific job in the database and updates the status of the Job
+ * @param {String} jobId Id of the job that will be updated
+ * @param {String} status Current status of the job (either waiting, executing, success or failed)
+ */
+exports.updateRobotJobStatus = async (jobId, status) => {
+  await jobsModel.Job.findByIdAndUpdate(jobId, { status }, (err) => {
+    if (err) {
+      console.error(err);
+    }
+  });
+};
+
+/**
+ * @description Updates the given Job when the run has failed with the list of failing activities
+ * @param {String} jobId Id of the job that will be updated
+ * @param {Array} errorLog List of logs of the robots activites
+ */
+exports.updateRobotJobErrors = async (jobId, errorLog) => {
+  const errors = errorLog.robotRun.activities
+    .filter((activity) => activity.status === 'FAIL')
+    .map((activity) => ({
+      activityName: activity.activityName,
+      tasks: activity.tasks,
+      message: activity.message,
+    }));
+  await jobsModel.Job.findByIdAndUpdate(
+    jobId,
+    { loggedErrors: errors },
+    (err) => {
+      if (err) {
+        console.error(err);
+      }
+    }
   );
 };
-export default RobotLogCard;
 
-RobotLogCard.propTypes = {
-  displayStatusIcon: PropTypes.func.isRequired,
-  log: PropTypes.oneOfType([PropTypes.arrayOf(Object), PropTypes.any])
-    .isRequired,
+/**
+ * @description Finds all jobs with status waiting in the database for a specific user
+ * @param {String} userId Id of the user for which all waiting jobs will be retrieved
+ */
+exports.getAllWaitingJobsForUser = async (userId) => {
+  const jobList = await jobsModel.Job.find(
+    { userId, status: 'waiting' },
+    (err) => {
+      if (err) {
+        console.error(err);
+      }
+    }
+  );
+  return jobList;
 };
 </code></pre>
         </article>
