--- a/server_utils_testing_testDatabaseHandler.js.html
+++ b/server_utils_testing_testDatabaseHandler.js.html
@@ -7,7 +7,7 @@
   
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title> frontend/src/components/pages/RobotInteractionCockpit/RobotInteractionSections/RobotInteractionExecutionSection/subComponents/RobotLogEntryCard.jsx</title>
+  <title> server/utils/testing/testDatabaseHandler.js</title>
 
   <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -76,7 +76,7 @@
             <div class="content">
                 <header class="page-title">
                     <p>Source</p>
-                    <h1>frontend/src/components/pages/RobotInteractionCockpit/RobotInteractionSections/RobotInteractionExecutionSection/subComponents/RobotLogEntryCard.jsx</h1>
+                    <h1>server/utils/testing/testDatabaseHandler.js</h1>
                 </header>
                 
 
@@ -85,59 +85,57 @@
     
     <section>
         <article>
-            <pre class="prettyprint source linenums"><code>import React from 'react';
-import { Card, Row, Col } from 'antd';
-import PropTypes from 'prop-types';
+            <pre class="prettyprint source linenums"><code>const mongoose = require('mongoose');
+const { MongoMemoryServer } = require('mongodb-memory-server');
 
 /**
- * @description Renders the status of an individual robot log
- * @category Frontend
- * @component
+ * @category Server
+ * @module
  */
-const RobotLogCard = (props) => {
-  const { log } = props;
-  const { displayStatusIcon } = props;
-
-  return (
-    &lt;Card
-      style={{ margin: '10px' }}
-      headStyle={{ fontWeight: 'bold' }}
-      hoverable
-      title={log.activityName}
-      size='small'
-      type='inner'
-    >
-      &lt;Row>
-        &lt;Col xs={24} md={16}>
-          {log.message &amp;&amp; &lt;p>Error Message: {log.message}&lt;/p>}
-          {log.tasks &amp;&amp;
-            log.tasks.map((task, index) => (
-              // eslint-disable-next-line react/no-array-index-key
-              &lt;Card key={index} size='small'>
-                &lt;Row>
-                  &lt;Col xs={24} lg={24} xl={16}>
-                    &lt;p>Task: {task.taskName}&lt;/p>
-                  &lt;/Col>
-                  &lt;Col xs={24} lg={24} xl={8}>
-                    &lt;p>Status: {task.status}&lt;/p>
-                  &lt;/Col>
-                &lt;/Row>
-              &lt;/Card>
-            ))}
-        &lt;/Col>
-        &lt;Col xs={24} md={8}>
-          &lt;>{displayStatusIcon(log.status)}&lt;/>
-        &lt;/Col>
-      &lt;/Row>
-    &lt;/Card>
-  );
+const mongooseOpts = {
+  useNewUrlParser: true,
+  useUnifiedTopology: true,
 };
-export default RobotLogCard;
 
-RobotLogCard.propTypes = {
-  displayStatusIcon: PropTypes.func.isRequired,
-  log: PropTypes.oneOfType([PropTypes.arrayOf(Object), PropTypes.any])
-    .isRequired,
+const mongod = new MongoMemoryServer({
+  instance: {
+    dbName: 'ark-automate',
+    port: 59051,
+  },
+});
+
+/**
+ * @description Connects to the in-memory database.
+ */
+exports.connect = async () => {
+  const uri = await mongod.getUri();
+  await mongoose.createConnection(uri, mongooseOpts);
+  await mongoose.connect(uri, mongooseOpts);
+};
+
+/**
+ * @description Drops the database, closes the connection and stops mongod.
+ */
+exports.closeDatabase = async () => {
+  await mongoose.connection.dropDatabase();
+  await mongoose.connection.close();
+  await mongoose.disconnect();
+  await mongod.stop();
+};
+
+/**
+ * @description Removes all the data for all db collections.
+ */
+exports.clearDatabase = async () => {
+  const { collections } = mongoose.connection;
+
+  // fix according to https://docs.w3cub.com/eslint/rules/no-await-in-loop.html
+  const result = [];
+  Object.keys(collections).forEach((key) => {
+    const collection = collections[key];
+    result.push(collection.deleteMany());
+  });
+  return Promise.all(result);
 };
 </code></pre>
         </article>
